--- a/src/main/resources/configTmp.yaml
+++ b/src/main/resources/configTmp.yaml
@@ -9,7 +9,7 @@ items:
     selected: true
   - !<CheckBox>
     text: "uruchom zmaksymalizowane"
-    selected: true
+    selected: false
   - !<CheckBox>
     text: "zapamientaj pozycje"
     selected: true
@@ -19,11 +19,13 @@ items:
 - !<PanelConfig>
   panel: "IDE"
   items:
+  - !<Label>
+    text: "jezyk interfejsu"
   - !<ComboBox>
     options:
     - "Polski"
     - "Angielski"
-    selected: "Angielski"
+    selected: "Polski"
   - !<CheckBox>
     text: "zapamientaj katalog przegladania"
     selected: false
@@ -31,7 +33,22 @@ items:
     text: "zapamientaj otwarte pliki"
     selected: true
 - !<PanelConfig>
-  panel: "okno"
+  panel: "GUI"
+  items:
+  - !<CheckBox>
+    text: "ukryj menu główne"
+    selected: true
+  - !<CheckBox>
+    text: "odpiety pasek narzedziowy"
+    selected: false
+  - !<CheckBox>
+    text: "zablokowany pasek narzedziowy"
+    selected: true
+  - !<CheckBox>
+    text: "tryb ciemny"
+    selected: false
+- !<PanelConfig>
+  panel: "GUI"
   items:
   - !<CheckBox>
     text: "ukryj menu główne"
